--- a/LinkerCofe/LinkerCofe/LinkerCofe.csproj
+++ b/LinkerCofe/LinkerCofe/LinkerCofe.csproj
@@ -145,5 +145,11 @@
   <ItemGroup>
     <None Include="Resources\Button 3-01.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Seller.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Table-01.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
